# arduino-libflac

./: CMakeLists.txt  README.md
src/: FLAC  bitmath.c  bitreader.c  bitwriter.c  cpu.c  crc.c  fixed.c  fixed_intrin_sse2.c  fixed_intrin_ssse3.c  flac.h  flac_config.h  float.c  format.c  lpc.c  lpc_intrin_avx2.c  lpc_intrin_neon.c  lpc_intrin_sse2.c  lpc_intrin_sse41.c  lpc_intrin_vsx.c  md5.c  memory.c  metadata_iterators.c  metadata_object.c  ogg_decoder_aspect.c  ogg_encoder_aspect.c  ogg_helper.c  ogg_mapping.c  private  protected  share  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c  stream_encoder_intrin_avx2.c  stream_encoder_intrin_sse2.c  stream_encoder_intrin_ssse3.c
src/libFLAC/: bitreader.c  stream_decoder.c
